# claude-sentient

./: .gitattributes  .gitignore  CHANGELOG.md  CHECKSUMS.sha256  CLAUDE.md  DECISIONS.md  ISSUES_FOUND.md  KNOWN_ISSUES.md  LICENSE  README.md  STATUS.md  generate-checksums.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.claude/: settings.json
agents/: CLAUDE.md  README.md  architect.yaml  backend.yaml  build-resolver.yaml  database.yaml  devops.yaml  docs.yaml  frontend.yaml  security.yaml  tester.yaml
archive/: README.md
commands/: cs-learn.md  cs-loop.md  cs-mcp.md  cs-plan.md  cs-status.md  cs-validate.md
dashboard/: CLAUDE.md  index.html  server.cjs
docs/: GAMEPLAN.md  V1_FEATURE_INVENTORY.md
documentation/: 01-autonomous-loop.md  02-session-lifecycle.md  03-security-gates.md  04-context-injection.md  05-quality-gates.md  06-agent-teams.md  07-profile-system.md  08-agent-roles.md  09-rules-system.md  10-command-system.md  11-installation.md  12-worktree-config-observability.md  13-planning.md  14-memory-learning.md  15-multi-model-routing.md  _index.md
patterns/: README.md
phases/: 01-init.md  02-understand.md  03-plan.md  04-execute.md  05-verify.md  06-quality.md  07-commit.md  08-evaluate.md
profiles/: CLAUDE.md  _profile.schema.yaml  cpp.yaml  general.profile.yaml  general.yaml  go.profile.yaml  go.yaml  java.yaml  python.profile.yaml  ruby.yaml  (+6 more)
sdk/python/: README.md  pyproject.toml
sdk/python/claude_sentient/: __init__.py  client.py  datatypes.py  gates.py  hooks.py  orchestrator.py  profiles.py  session.py  validators.py  vision.py
sdk/python/tests/: __init__.py  conftest.py  test_commands.py  test_datatypes.py  test_gates.py  test_hooks.py  test_integration.py  test_orchestrator.py  test_profiles.py  test_session.py  test_types.py  test_vision.py
(+429 files in other folders)
